--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,34 @@
     background-color: blue;
 }
 
+form {
+    display: flex;
+    padding: 2px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  input {
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 5px;
+    font-size: 16px;
+    background-color: #fff;
+    color: #555;
+  }
+  
+  button {
+    width: 20px;
+    height: 20px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: #555;
+    cursor: pointer;
+  }
+  
+  .fa-search {
+    font-size: 16px;
+  }
+  
