added some functionality for listing movies

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,11 @@ form {
     font-size: 16px;
   }
   
+  .card{
+    display: flex;
+    flex-direction: column;
+    height: 378px;
+    margin: 5px 0 10px;
+    position: relative;
+    width: 224px;
+  }
