--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,23 @@ form {
     position: relative;
     width: 224px;
   }
+
+  .card-image {
+    background-position: 50%!important;
+    background-repeat: no-repeat!important;
+    background-size: cover;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0,0,0,.5);
+    height: 100%;
+    width: 100%;
+  }
+
+  .card-title{
+    border-bottom-left-radius: 1vw;
+    border-bottom-right-radius: 1vw;
+    box-shadow: 0 0 15px #000;
+    color: #f5f5f5;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+  }
