--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,11 +54,11 @@ form {
     width: 100%;
   }
 
-  .card-title{
+  .card-text{
     border-bottom-left-radius: 1vw;
     border-bottom-right-radius: 1vw;
     box-shadow: 0 0 15px #000;
-    color: #f5f5f5;
+    color: #000000;
     font-size: 15px;
     font-weight: 600;
     text-align: center;
