--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     background-color: blue;
 }
 
+
 form {
     display: flex;
     position: fixed;
@@ -42,6 +43,7 @@ form {
     margin: 5px 0 10px;
     position: relative;
     width: 224px;
+    margin: .5rem;
   }
 
   .card-image {
@@ -63,3 +65,39 @@ form {
     font-weight: 600;
     text-align: center;
   }
+
+  #moviespage{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .loading-dots {
+    text-align: center;
+    z-index: 5;
+  
+    .dot {
+      display: inline;
+      margin-left: 0.2em;
+      margin-right: 0.2em;
+      position: relative;
+      top: -1em;
+      font-size: 3.5em;
+      opacity: 0;
+      animation: showHideDot 2.5s ease-in-out infinite;
+  
+      &.one { animation-delay: 0.2s; }
+      &.two { animation-delay: 0.4s; }
+      &.three { animation-delay: 0.6s; }
+    }
+  }
+  
+  @keyframes showHideDot {
+    0% { opacity: 0; }
+    50% { opacity: 1; }
+    60% { opacity: 1; }
+    100% { opacity: 0; }
+  }
+
+.loading{
+  font-size: 2rem;
+}
