--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ form {
     position: relative;
     width: 224px;
     margin: .5rem;
+    position: relative;
   }
 
   .card-image {
@@ -100,4 +101,44 @@ form {
 
 .loading{
   font-size: 2rem;
+}
+
+.noWatch{
+  background-color: rgb(207, 7, 7);
+  position: absolute;
+  right: 7px;
+  top: 0px;
+  width: 100px;
+  height: 15px;
+  border: black 1px solid;
+  border-radius: 5px;
+  opacity: 75%;
+  font-size: 10px;
+}
+
+.yesWatch{
+  background-color: rgb(87, 207, 7);
+  position: absolute;
+  right: 7px;
+  top: 0px;
+  width: 100px;
+  height: 15px;
+  border: black 1px solid;
+  border-radius: 5px;
+  opacity: 75%;
+  font-size: 10px;
+  cursor: default;
+}
+
+.remove{
+  background-color: rgb(207, 7, 7);
+  position: absolute;
+  right: 7px;
+  top: 0px;
+  width: 100px;
+  height: 15px;
+  border: black 1px solid;
+  border-radius: 5px;
+  opacity: 75%;
+  font-size: 10px;
 }
